uz nevim co delam

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>karticky</title>
     <link rel="stylesheet" href="css/style.css">  
+    <link rel="stylesheet" href="css/typography.css">  
 </head>
 <body>
-    
+    <figure class="card">
+        <header class="card--header">
+          <img class="img-responsive" src="./img/Jc.jpg" />
+        </header>
+        <div class="card--body">
+          <h2 class="card--heading">Leona Jenčová (Jč)</h2>
+          <address>
+            <p><span class="icon">job</span> <span>pedagog</span></p>
+            <p>
+              <span class="icon">email</span>
+              <span>leona.jencova@pslib.cz</span>
+            </p>
+            <p>
+              <span class="icon icon--important">mobile</span> <span>+420 485 100 113</span>
+            </p>
+          </address>
+        </div>
+      </figure>
 </body>
 </html>
